--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "firebase": "^8.4.2",
     "mdb-angular-ui-kit": "^1.0.0-beta3",
     "mini-css-extract-plugin": "^1.2.1",
+    "ngx-scrollreveal": "^3.0.0",
     "ngx-toastr": "^13.2.1",
     "notyf": "^3.9.0",
     "rxjs": "~6.6.0",
+    "scrollreveal": "^4.0.9",
     "soft-ui-design-system": "^1.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
