--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/soft-design-system.min.css"
             ],
             "scripts": [        "./node_modules/scrollreveal/dist/scrollreveal.js"
             ]
@@ -96,7 +97,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/soft-ui-design-system/assets/css/soft-design-system.min.css",
+              "src/assets/css/soft-design-system.min.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [        "./node_modules/scrollreveal/dist/scrollreveal.js"
