--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "scrollreveal": "^4.0.9",
     "soft-ui-design-system": "^1.0.3",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
