--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/core": "~11.2.12",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.12",
+    "@angular/localize": "~11.2.12",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "bootstrap": "^4.5.0",
     "firebase": "^8.4.2",
     "mdb-angular-ui-kit": "^1.0.0-beta3",
     "mini-css-extract-plugin": "^1.2.1",
