--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.5.0",
-    "firebase": "^8.4.2",
+    "firebase": "^8.4.3",
     "mdb-angular-ui-kit": "^1.0.0-beta3",
     "mini-css-extract-plugin": "^1.2.1",
     "ng2-search-filter": "^0.5.1",
@@ -36,7 +36,7 @@
     "scrollreveal": "^4.0.9",
     "soft-ui-design-system": "^1.0.3",
     "tslib": "^2.0.0",
-    "uuid": "^8.3.1",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -46,6 +46,7 @@
     "@angular/compiler-cli": "~11.2.12",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^9.10.0",
     "fuzzy": "^0.1.3",
